# ftp-data-processor

./: Base.Dockerfile  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  pytest.ini
app/db/: connection.py
app/pipelines/: config_loader.py  flow.py  ftp_file_watcher.py  run_watchers.py  watcher_manager.py
app/pipelines/NGC/: config.py
app/pydantic_models/: __init__.py  daily.py  deal_data.py  deal_data_enhanced.py  file_hash.py  imsis.py  monthly.py  utils.py
app/services/: deal_data_service_mapper.py  enhanced_dd_service.py
app/sqlalchemy_schemas/: __init__.py  daily.py  file_hash.py  imsis.py  monthly.py  utils.py
app/tasks/: get_deal_data.py  load_and_clean_data.py  process_operator_subframe.py  split_frame_by_operator.py  upsert_operator_monthly_subframe.py
app/tasks/bolt_transformers/: NGC_bolt_transform.py
app/utils/: utils.py
